tests/data/access-control/ingress/standard-invalid/annotations-ac-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/policies: "invalid-policy"
  name: annotations-ac-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-ac.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
